Prevent wrapping as screen size decreases.

--- a/assets/css/dashboard/configure-screens-page.scss
+++ b/assets/css/dashboard/configure-screens-page.scss
@@ -9,6 +9,7 @@
     max-width: 1320px;
 
     &__title {
+      white-space: nowrap;
       width: fit-content;
       font-weight: 700;
       font-size: 28px;
